testcases/negative/insert-shape-wrong-doctype.otk
OFFICETALK/1.0
DOCTYPE word

AT body/paragraph[1]
INSERT SHAPE rectangle width=200pt height=100pt
